<resources>
    <string name="_appname">MyCalculator</string>
    <string name="_empty"><![CDATA[<empty>]]></string>
    <string name="_zero">0</string>
    <string name="_error">Error in expression</string>
    <string name="_m">M</string>
    <string name="_dtl">DTL</string>
    <string name="_ac">AC</string>
    <string name="_mplus">M+</string>
    <string name="_del">DEL</string>
    <string name="_mread">MR</string>
    <string name="_bracketopen">(</string>
    <string name="_bracketclose">)</string>
    <string name="_devide">/</string>
    <string name="_multiply">*</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_minus">-</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_plus">+</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_equals">=</string>
    <string name="_invert">+/-</string>
    <string name="_dot">.</string>
</resources>