<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewHistory"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/white"
            android:gravity="center|end"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textViewResult"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:background="@color/white"
            android:gravity="center|end"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/_zero"
            android:textColor="@color/black"
            android:textSize="45sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewLabelMemory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="2dp"
                android:text="@string/_m"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewMemory"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/_empty"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAC"
            android:layout_width="85dp"
            android:layout_height="80dp"
            android:layout_columnWeight="1"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:backgroundTint="@color/white"
            android:text="@string/_ac"
            android:textColor="@color/orange"
            android:textSize="25sp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnMemoryAdd"
            android:layout_width="85dp"
            android:layout_height="80dp"
            android:layout_columnWeight="1"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:backgroundTint="@color/white"
            android:text="@string/_mplus"
            android:textColor="@color/orange"
            android:textSize="25sp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnMemoryUse"
            android:layout_width="85dp"
            android:layout_height="80dp"
            android:layout_columnWeight="1"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:backgroundTint="@color/white"
            android:text="@string/_mread"
            android:textColor="@color/orange"
            android:textSize="25sp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnDel"
            android:layout_width="85dp"
            android:layout_height="80dp"
            android:layout_columnWeight="1"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:backgroundTint="@color/white"
            android:text="@string/_del"
            android:textColor="@color/orange"
            android:textSize="25sp"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnBracketOpen"
            android:layout_width="85dp"
            android:layout_height="80dp"
            android:layout_columnWeight="1"
            android:layout_marginStart="3dp"
            android:backgroundTint="@color/white"
            android:text="@string/_bracketopen"
            android:textColor="@color/orange"
            android:textSize="25sp"
            tools:ignore="TextContrastCheck"
            android:layout_marginEnd="3dp" />

        <Button
            android:id="@+id/btnBracketClose"
            android:layout_width="85dp"
            android:layout_height="80dp"
            android:layout_columnWeight="1"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:backgroundTint="@color/white"
            android:text="@string/_bracketclose"
            android:textColor="@color/orange"
            android:textSize="25sp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnDummy"
            android:layout_width="85dp"
            android:layout_height="80dp"
            android:layout_columnWeight="1"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:backgroundTint="@color/white"
            android:text="..²"
            android:textColor="@color/orange"
            android:textSize="25sp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnDevide"
            android:layout_width="85dp"
            android:layout_height="80dp"
            android:layout_columnWeight="1"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:backgroundTint="@color/white"
            android:text="@string/_devide"
            android:textColor="@color/orange"
            android:textSize="25sp"
            android:visibility="visible"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSeven"
            android:layout_width="85dp"
            android:layout_height="80dp"
            android:layout_columnWeight="1"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:backgroundTint="@color/white"
            android:text="@string/_7"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btnEight"
            android:layout_width="85dp"
            android:layout_height="80dp"
            android:layout_columnWeight="1"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:backgroundTint="@color/white"
            android:text="@string/_8"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btnNine"
            android:layout_width="85dp"
            android:layout_height="80dp"
            android:layout_columnWeight="1"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:backgroundTint="@color/white"
            android:text="@string/_9"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="85dp"
            android:layout_height="80dp"
            android:layout_columnWeight="1"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:backgroundTint="@color/white"
            android:text="@string/_multiply"
            android:textColor="@color/orange"
            android:textSize="25sp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnFour"
            android:layout_width="85dp"
            android:layout_height="80dp"
            android:layout_columnWeight="1"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:backgroundTint="@color/white"
            android:text="@string/_4"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btnFive"
            android:layout_width="85dp"
            android:layout_height="80dp"
            android:layout_columnWeight="1"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:backgroundTint="@color/white"
            android:text="@string/_5"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btnSix"
            android:layout_width="85dp"
            android:layout_height="80dp"
            android:layout_columnWeight="1"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:backgroundTint="@color/white"
            android:text="@string/_6"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btnMinus"
            android:layout_width="85dp"
            android:layout_height="80dp"
            android:layout_columnWeight="1"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:backgroundTint="@color/white"
            android:text="@string/_minus"
            android:textColor="@color/orange"
            android:textSize="25sp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnOne"
            android:layout_width="85dp"
            android:layout_height="80dp"
            android:layout_columnWeight="1"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:backgroundTint="@color/white"
            android:text="@string/_1"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btnTwo"
            android:layout_width="85dp"
            android:layout_height="80dp"
            android:layout_columnWeight="1"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:backgroundTint="@color/white"
            android:text="@string/_2"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btnThree"
            android:layout_width="85dp"
            android:layout_height="80dp"
            android:layout_columnWeight="1"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:backgroundTint="@color/white"
            android:text="@string/_3"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="85dp"
            android:layout_height="80dp"
            android:layout_columnWeight="1"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:backgroundTint="@color/white"
            android:text="@string/_plus"
            android:textColor="@color/orange"
            android:textSize="25sp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnInvert"
            android:layout_width="85dp"
            android:layout_height="80dp"
            android:layout_columnWeight="1"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:backgroundTint="@color/white"
            android:text="@string/_invert"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btnZero"
            android:layout_width="85dp"
            android:layout_height="80dp"
            android:layout_columnWeight="1"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:backgroundTint="@color/white"
            android:text="@string/_zero"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btnDot"
            android:layout_width="85dp"
            android:layout_height="80dp"
            android:layout_columnWeight="1"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:backgroundTint="@color/white"
            android:text="@string/_dot"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btnEquals"
            android:layout_width="85dp"
            android:layout_height="80dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:backgroundTint="@color/orange"
            android:text="@string/_equals"
            android:textColor="@color/white"
            android:textSize="25sp"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>
</LinearLayout>